<resources>
    <string name="app_name">Room Databases</string>
    <string name="Add_class">Add class</string>
    <string name="name_class">Name class</string>
    <string name="date_create">Date create</string>
    <string name="teacher"> Teacher</string>
    <string name="hint_name_class"> Please enter name class</string>
    <string name="hint_teacher">Please enter teacher name</string>
    <string name="add_student">Add student</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="Class">Class</string>
    <string name="hint_name">Please enter name</string>
    <string name="student"> Students</string>
    <string name="all">All</string>
    <string name="birthday_student_item"> Birth day: </string>
    <string name="class_name_student_item">Class:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="choose_tha_date">Choose tha date</string>
    <string name="edit_student">Edit student</string>
    <string name="delete_student">Delete student</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_class_or_student">Add classes and students to show</string>
    <string name="add_student_in_chosen">Please add student in chosen class</string>
    <string name="pls_add_class">Please add new class</string>
    <string name="choose_or_add_class">Please choose or add class</string>
    <string name="enter_information">Please enter information</string>
    <string name="pls_add_new_class">Please add new class</string>
    <string name="edit_success">Edit successfully</string>
</resources>