<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.addstudent.AddStudentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/AddStudentToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_student"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imStudent"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@+id/AddStudentToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="#E3DBDB"
        app:shapeAppearanceOverlay="@style/circle" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imStudent"
        app:layout_constraintTop_toBottomOf="@+id/imStudent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtNameStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtNameStudent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/birthday"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/edtBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/rlBirthday"
            app:layout_constraintBottom_toBottomOf="@id/rlBirthday"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/background_edittext"
            android:hint="@string/choose_tha_date"
            android:inputType="date"
            android:padding="10dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_calendar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlBirthday"
        app:layout_constraintTop_toBottomOf="@+id/rlBirthday"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Class"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/lnAddClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvClass"
        android:layout_marginTop="10dp"
        android:weightSum="10">

        <Spinner
            android:id="@+id/spClass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAddClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/Add_class"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lnAddClass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/background_button"
        android:padding="5dp"
        android:text="@string/add_student"
        android:textAllCaps="false"
        android:textColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>